--- a/first-gitfile.html
+++ b/first-gitfile.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    div 
+    {
+        background-color: blue;
+    }
+</style>
 <body>
-    
+    <div class="whole-container">
+        <div class="container"></div>
+        <div class="container"></div>
+        <div class="container"></div>
+        <div class="container"></div>
+        <div class="container"></div>
+    </div>
 </body>
 </html>
