--- a/first-gitfile.html
+++ b/first-gitfile.html
@@ -17,7 +17,10 @@
         <div class="container"></div>
         <div class="container"></div>
         <div class="container"></div>
+        <section></section>
         <div class="container"></div>
+        <div></div>
+        <div></div>
     </div>
 </body>
 </html>
