--- a/first-gitfile.html
+++ b/first-gitfile.html
@@ -20,9 +20,22 @@
         <section></section>
         <div class="container"></div>
         <div>hello
+
+        </div>
+        <div>the code for new resportory is :
+            git init,
+            git add .
+            git status(optional)
+            git commit -m "whatever"
+            git branch -M main
+            git remote add origin "https//:github.com/profile/portfolio.git"
+            git push -u origin main
+
+            git remove remote origin
+            to paste or clone a code
+            write git clone and then copy the repository name from the clone from code 
             
         </div>
-        <div></div>
     </div>
 </body>
 </html>
